<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pound</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="action_save">Save</string>
    <string name="action_done">Done</string>
    <string name="action_upload">Upload</string>
    <string name="action_delete">Delete</string>
    <string name="section_label">Section Label</string>
    <string name="lostAPet">Lost A Pet</string>
    <string name="foundAPet">Found A Pet</string>
    <string name="missingPets">Missing Pets</string>
    <string name="foundPets">Found Pets</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="breed">Breed</string>
    <string name="color">Color</string>
    <string name="location">Location</string>
    <string name="owner_details">Owner Details</string>
    <string name="contact_owner">Contact Owner</string>
    <string name="pet_details">Pet Details</string>
    <string name="finder_details">Finder Details</string>
    <string name="contact_detail">Contact Details</string>
    <string name="reward">Reward</string>
    <string name="notes">Notes</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="login_description">Log in with facebook to link you to your pet posts. It allows you to delete posts that you have made and in the future will allow you to share your pets on your timeline</string>
    <string name="title_activity_pet_location">Map</string>
    <string name="contact_details_phone">Phone Number</string>
    <string name="contact_details_email">Email</string>
    <string name="contact_details_address">Address</string>
    <string name="settings_themes">Themes</string>
    <string name="settings_settings">Settings</string>
    <string name="settings_location">Use Location</string>
    <string name="settings_push">Push Notifications</string>
    <string name="settings_data">Save Data Locally</string>
    <string name="themes_frog">Frog</string>
    <string name="themes_polar">Polar</string>
    <string name="themes_green">Green</string>
    <string name="themes_red">Red</string>
    <string name="themes_purple">Purple</string>


    <string name="server_base_address">http://pound-backend.herokuapp.com</string>
    <string name="app_id">621666267930187</string>

    <string name="about_title">About</string>
    <string name="about_detail">Pound is your best tool to find you missing pet\nUse the community to help find
    your pet faster.\nPost pets you find to public board to help them find their home again\n\n\nPlease enjoy using this app. Contact me with any feedback at bienprogramming@gmail.com\n</string>

    <string name="about_creator">Built by Christian Bieniak</string>

        <string-array name="menu_items">
            <item>@string/title_activity_pet_location</item>
        </string-array>

</resources>
