<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bienprogramming.pound.app.Fragment.AboutFragment"
    android:padding="@dimen/mediumPadding">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="?raised_color"
        android:padding="@dimen/mediumPadding">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/about_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?highlight_color" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_detail"
        android:layout_margin="@dimen/mediumPadding" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_creator"
            android:layout_gravity="bottom"/>
    </LinearLayout>

</FrameLayout>
